samples/openshift/cluster/devportal.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devportal
  labels:
    app: devportal
spec:
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  serviceName: devportal-svc
  selector:
    matchLabels:
      app: devportal
  template:
    metadata:
      labels:
        app: devportal
      name: devportal
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - devportal
                topologyKey: kubernetes.io/hostname
      containers:
        - name: devportal
          image: ibmwebmethods.azurecr.io/devportal:11.1
          resources:
            limits:
              cpu: "4"
              memory: "4096Mi"
            requests:
              cpu: "1"
              memory: "1024Mi"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
