samples/openshift/cluster/devportal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: devportal-lb
  labels:
    run: devportal-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app: devportal
