samples/openshift/cluster/devportal-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: devportal-route
  namespace: dpocluster
  labels:
    run: devportal-lb
spec:
  host: devportal-route-dpocluster.apps.<openshift.url>
  path: /portal
  to:
    kind: Service
    name: devportal-lb
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
